--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@ businesses.</p></li>
         <div class="container">
           <h2>Contact</h2>
           <p>Phone: +1(202)270-1902 | +234 681 3157 8274 | +237 675483739</p> <br>
-          <form class="contact-form" action="https://formcarry.com/s/XpsxrVEMdy0" method="POST" enctype="multipart/form-data">
+          <form class="contact-form" action="https://formcarry.com/s/Yfz8yVJDuw7" method="POST" enctype="multipart/form-data">
             <div class="form-row">
               <input name="name" placeholder="Your name" required /><input
                 name="email"
@@ -556,7 +556,7 @@ businesses.</p></li>
     <div class="footer-newsletter">
       <h4>Newsletter</h4>
       <p>Subscribe for updates</p>
-      <form action="https://formcarry.com/s/XpsxrVEMdy0" method="POST" enctype="multipart/form-data">
+      <form action="https://formcarry.com/s/Yfz8yVJDuw7" method="POST" enctype="multipart/form-data">
         <input name="email" placeholder="Enter your email" type="email" required />
         <input type="hidden" name="_subject" value="New WES Newsletter Subscription" />
         <button class="btn">Subscribe</button>
