--- a/register.html
+++ b/register.html
@@ -95,7 +95,7 @@
         <div class="footer-newsletter">
           <h4>Newsletter</h4>
           <p>Subscribe for updates</p>
-          <form action="https://formcarry.com/s/XpsxrVEMdy0" method="POST" enctype="multipart/form-data">
+          <form action="https://formcarry.com/s/Yfz8yVJDuw7" method="POST" enctype="multipart/form-data">
             <input name="email" placeholder="Enter your email" type="email" required />
             <button class="btn">Subscribe</button>
           </form>
