--- a/register.html
+++ b/register.html
@@ -41,7 +41,7 @@
         <div class="container">
           <h2 style="margin-bottom: 1rem; padding-top: 2rem; color: var(--muted);">Register for WES 2025</h2>
           <p style="margin-bottom: 1.5rem; color: var(--muted);">Please fill the form to complete registration</p>
-          <form class="register-form" action="https://formcarry.com/s/XpsxrVEMdy0" method="POST" enctype="multipart/form-data">
+          <form class="register-form" action="https://formcarry.com/s/Yfz8yVJDuw7" method="POST" enctype="multipart/form-data">
             <div class="form-row">
               <input name="name" placeholder="Full name" required />
               <input name="email" placeholder="Your Email" type="email" required />
