--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@ businesses.</p></li>
     <p>
       &copy; 2025 WES Conference. All rights reserved.
       Made with ❤️ by
-      <a rel="noopener" href="https://hartitudeh.vercel.app" target="_blank">Hartitudeh Tech</a>
+      <a rel="noopener" href="#" target="_blank">JKode</a>
     </p>
     <a href="index.html#top" class="back-top">↑ Back to top</a>
   </div>
