--- a/register.html
+++ b/register.html
@@ -105,7 +105,7 @@
         <p>
           &copy; 2025 WES Conference. All rights reserved.
           Made with ❤️ by
-          <a rel="noopener" href="https://hartitudeh.vercel.app" target="_blank">Hartitudeh Tech</a>
+          <a rel="noopener" href="#" target="_blank">JKode</a>
         </p>
         <a href="#top" class="back-top">↑ Back to top</a>
       </div>
