--- a/register.html
+++ b/register.html
@@ -41,14 +41,14 @@
         <div class="container">
           <h2 style="margin-bottom: 1rem; padding-top: 2rem; color: var(--muted);">Register for WES 2025</h2>
           <p style="margin-bottom: 1.5rem; color: var(--muted);">Please fill the form to complete registration</p>
-          <form class="register-form" action="https://formcarry.com/s/Yfz8yVJDuw7" method="POST" enctype="multipart/form-data">
+          <form class="register-form" action="https://formcarry.com/s/Yfz8yVJDuw7" method="POST">
             <div class="form-row">
               <input name="name" placeholder="Full name" required />
               <input name="email" placeholder="Your Email" type="email" required />
             </div>
             <div class="form-row">
               <input name="phone" placeholder="Whatsapp number" />
-              <select name="Type of ticket" required>
+              <select name="type_of_ticket" required>
                 <option value="">Select participant type</option>
                 <option>Californium Summit</option>
                 <option>Palladium Summit</option>
