remove double slash

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ The World Entrepreneur Summit</h2>
 
       <section id="speakers" class="section" data-aos="fade-up">
         <div class="container">
-          <h2 style="margin-bottom: 1.5rem; color: var(--muted);">// Meet Our Champions</h2>
+          <h2 style="margin-bottom: 1.5rem; color: var(--muted);">Meet Our Champions</h2>
           <div class="speakers-grid">
             <article class="speaker-card" data-aos="zoom-in">
               <img
