--- a/register.html
+++ b/register.html
@@ -13,6 +13,15 @@
     <link rel="stylesheet" href="css/vision.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+    </script>
+    <script type="text/javascript">
+      (function () {
+        emailjs.init({
+          publicKey: "Zr-9nmplAK3BlgYdt",
+        });
+      })();
+    </script>
   </head>
   <body>
     <header class="top-header">
@@ -41,7 +50,7 @@
         <div class="container">
           <h2 style="margin-bottom: 1rem; padding-top: 2rem; color: var(--muted);">Register for WES 2025</h2>
           <p style="margin-bottom: 1.5rem; color: var(--muted);">Please fill the form to complete registration</p>
-          <form class="register-form" action="https://formcarry.com/s/Yfz8yVJDuw7" method="POST">
+          <form class="register-form" method="POST">
             <div class="form-row">
               <input name="name" placeholder="Full name" required />
               <input name="email" placeholder="Your Email" type="email" required />
