add upcoming events page, update homepage

--- a/register.html
+++ b/register.html
@@ -1,128 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Register • WES Conference 2025</title>
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/usersec.css" />
-    <link rel="stylesheet" href="css/about.css" />
-    <link rel="stylesheet" href="css/carousel.css" />
-    <link rel="stylesheet" href="css/reason.css" />
-    <link rel="stylesheet" href="css/nav.css" />
-    <link rel="stylesheet" href="css/vision.css" />
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
-    </script>
-    <script type="text/javascript">
-      (function () {
-        emailjs.init({
-          publicKey: "Zr-9nmplAK3BlgYdt",
-        });
-      })();
-    </script>
-  </head>
-  <body>
-    <header class="top-header">
-      <div class="container header-inner">
-        <a class="brand" href="index.html#">WES 2025</a>
-        <button class="nav-toggle" id="navToggle" aria-label="Toggle menu">
-          <span></span>
-          <span></span>
-          <span></span>
-        </button>
-        <nav class="nav" id="navMenu">
-          <a href="index.html#about">About</a>
-          <a href="index.html#speakers">Speakers</a>
-          <a href="index.html#reason">Reasons</a>
-          <a href="index.html#sponsors">Sponsors</a>
-          <a href="index.html#contact">Contact</a>
-          <hr>
-          <button id="themeToggle" aria-label="Toggle theme">🌙</button>
-          <a href="register.html" class="btn primary">Register</a>
-        </nav>
-      </div>
-    </header>
 
-    <main>
-      <section class="section register-section" data-aos="fade-up">
-        <div class="container">
-          <h2 style="margin-bottom: 1rem; padding-top: 2rem; color: var(--muted);">Register for WES 2025</h2>
-          <p style="margin-bottom: 1.5rem; color: var(--muted);">Please fill the form to complete registration</p>
-          <form class="register-form" method="POST">
-            <div class="form-row">
-              <input name="name" placeholder="Full name" required />
-              <input name="email" placeholder="Your Email" type="email" required />
-            </div>
-            <div class="form-row">
-              <input name="phone" placeholder="Whatsapp number" />
-              <select name="type_of_ticket" required>
-                <option value="">Select participant type</option>
-                <option>Californium Summit</option>
-                <option>Palladium Summit</option>
-                <option>Platinium Summit</option>
-                <option>Sponsor</option>
-                <option>Speaker</option>
-                <option>Visitor</option>
-                <option>Ambassador</option>
-                <option>Partner</option>
-              </select>
-            </div>
-            <div class="form-row">
-              <input name="company" placeholder="Company name" required />
-            </div>
-            <input type="hidden" name="_subject" value="New WES Registration" />
-            <input type="hidden" name="_gotcha" style="display:none" />
-            <div>
-              <button class="btn primary" type="submit">Submit</button>
-            </div>
-          </form>
-        </div>
-      </section>
-    </main>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Register • WES Conference 2025</title>
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/usersec.css" />
+  <link rel="stylesheet" href="css/about.css" />
+  <link rel="stylesheet" href="css/carousel.css" />
+  <link rel="stylesheet" href="css/reason.css" />
+  <link rel="stylesheet" href="css/nav.css" />
+  <link rel="stylesheet" href="css/vision.css" />
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+  </script>
+  <script type="text/javascript">
+    (function () {
+      emailjs.init({
+        publicKey: "Zr-9nmplAK3BlgYdt",
+      });
+    })();
+  </script>
+</head>
 
-    <footer class="site-footer" data-aos="fade-up">
-      <div class="container footer-grid">
-        <div class="footer-brand">
-          <h3>WES 2025</h3>
-          <p>Championing economic emancipation and emergence.</p>
-          <div class="social-links">
-            <a href="index.html#"><i class="fab fa-facebook-f"></i></a>
-            <a href="index.html#"><i class="fab fa-twitter"></i></a>
-            <a href="index.html#"><i class="fab fa-linkedin-in"></i></a>
+<body>
+  <header class="top-header">
+    <div class="container header-inner">
+      <a class="brand" href="index.html#">WES 2025</a>
+      <button class="nav-toggle" id="navToggle" aria-label="Toggle menu">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+      <nav class="nav" id="navMenu">
+        <a href="index.html#about">About</a>
+        <a href="index.html#speakers">Speakers</a>
+        <a href="index.html#reason">Reasons</a>
+        <a href="index.html#sponsors">Sponsors</a>
+        <a href="upcoming-events.html">Upcoming Events</a>
+        <a href="index.html#contact">Contact</a>
+        <hr>
+        <button id="themeToggle" aria-label="Toggle theme">🌙</button>
+        <a href="register.html" class="btn primary">Register</a>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+    <section class="section register-section" data-aos="fade-up">
+      <div class="container">
+        <h2 style="margin-bottom: 1rem; padding-top: 2rem; color: var(--muted);">Register for WES 2025</h2>
+        <p style="margin-bottom: 1.5rem; color: var(--muted);">Please fill the form to complete registration</p>
+        <form class="register-form" method="POST">
+          <div class="form-row">
+            <input name="name" placeholder="Full name" required />
+            <input name="email" placeholder="Your Email" type="email" required />
           </div>
-        </div>
-        <div class="footer-links">
-          <h4>Quick Links</h4>
-          <ul>
-            <li><a href="index.html#about">About</a></li>
-            <li><a href="index.html#speakers">Speakers</a></li>
-            <li><a href="index.html#reason">Reason</a></li>
-          </ul>
-        </div>
-        <div class="footer-newsletter">
-          <h4>Newsletter</h4>
-          <p>Subscribe for updates</p>
-          <form action="https://formcarry.com/s/Yfz8yVJDuw7" method="POST" enctype="multipart/form-data">
-            <input name="email" placeholder="Enter your email" type="email" required />
-            <button class="btn">Subscribe</button>
-          </form>
+          <div class="form-row">
+            <input name="phone" placeholder="Whatsapp number" />
+            <select name="type_of_ticket" required>
+              <option value="">Select participant type</option>
+              <option>Californium Summit</option>
+              <option>Palladium Summit</option>
+              <option>Platinium Summit</option>
+              <option>Sponsor</option>
+              <option>Speaker</option>
+              <option>Visitor</option>
+              <option>Ambassador</option>
+              <option>Partner</option>
+            </select>
+          </div>
+          <div class="form-row">
+            <input name="company" placeholder="Company name" required />
+          </div>
+          <input type="hidden" name="_subject" value="New WES Registration" />
+          <input type="hidden" name="_gotcha" style="display:none" />
+          <div>
+            <button class="btn primary" type="submit">Submit</button>
+          </div>
+        </form>
+      </div>
+    </section>
+  </main>
+
+  <footer class="site-footer" data-aos="fade-up">
+    <div class="container footer-grid">
+      <div class="footer-brand">
+        <h3>WES 2025</h3>
+        <p>Championing economic emancipation and emergence.</p>
+        <div class="social-links">
+          <a href="index.html#"><i class="fab fa-facebook-f"></i></a>
+          <a href="index.html#"><i class="fab fa-twitter"></i></a>
+          <a href="index.html#"><i class="fab fa-linkedin-in"></i></a>
         </div>
       </div>
-      <div class="footer-bottom container">
-        <p>
-          &copy; 2025 WES Conference. All rights reserved.
-          Made with ❤️ by
-          <a rel="noopener" href="#" target="_blank">JKode</a>
-        </p>
-        <a href="#top" class="back-top">↑ Back to top</a>
+      <div class="footer-links">
+        <h4>Quick Links</h4>
+        <ul>
+          <li><a href="index.html#about">About</a></li>
+          <li><a href="index.html#speakers">Speakers</a></li>
+          <li><a href="index.html#reason">Reason</a></li>
+        </ul>
       </div>
-    </footer>
+      <div class="footer-newsletter">
+        <h4>Newsletter</h4>
+        <p>Subscribe for updates</p>
+        <form action="https://formcarry.com/s/Yfz8yVJDuw7" method="POST" enctype="multipart/form-data">
+          <input name="email" placeholder="Enter your email" type="email" required />
+          <button class="btn">Subscribe</button>
+        </form>
+      </div>
+    </div>
+    <div class="footer-bottom container">
+      <p>
+        &copy; 2025 WES Conference. All rights reserved.
+        Made with ❤️ by
+        <a rel="noopener" href="#" target="_blank">JKode</a>
+      </p>
+      <a href="#top" class="back-top">↑ Back to top</a>
+    </div>
+  </footer>
 
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="js/script.js"></script>
-    <script src="https://carrier.formcarry.com/js/v1.js"></script>
-  </body>
-  </html>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script src="js/script.js"></script>
+  <script src="https://carrier.formcarry.com/js/v1.js"></script>
+</body>
 
+</html>
