--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <a href="index.html#speakers">Speakers</a>
         <a href="index.html#reason">Reasons</a>
         <a href="index.html#sponsors">Sponsors</a>
+        <a href="upcoming-events.html">Upcoming Events</a>
         <a href="index.html#contact">Contact</a>
         <hr>
         <button id="themeToggle" aria-label="Toggle theme">🌙</button>
@@ -55,7 +56,7 @@
           ECONOMY in every country.
         </p>
         <div class="meta">
-          <span>27th - 28st November 2025</span> • <span>Johannesburg, South Africa</span>
+          <span>14th December, 2025</span> • <span>Ikeja, Lagos, Nigeria</span>
         </div>
         <div class="hero-ctas">
           <button id="heroRegister" class="btn primary">Register Now</button>
@@ -116,7 +117,7 @@
         <h1>Welcome to The <span>World Biggest Entrepreneur Submit</span></h1>
         <div class="about-description">
           <p>Get ready for a groundbreaking event! The World Entrepreneur Summit is set to ignite the entrepreneurial
-            spirit on 27th - 28th November 2025. This extraordinary gathering will bring together a dynamic community of
+            spirit on 14th December, 2025. This extraordinary gathering will bring together a dynamic community of
             over 1000+ entrepreneurs from 20+ countries.</p>
           <p>Resource persons will include, men of renown and
             established entrepreneurs from across Africa and the
@@ -135,14 +136,14 @@
           <div class="detail-box">
             <i class="fa-solid fa-calendar"></i>
             <div class="date">
-              <strong>27th - 28th Nov, 2025</strong>
+              <strong>14th Dec, 2025</strong>
               <span>Event Date</span>
             </div>
           </div>
           <div class="detail-box">
             <i class="fa-solid fa-location-crosshairs"></i>
             <div class="location">
-              <strong>Johannesburg, South Africa</strong>
+              <strong>Ikeja, Lagos, Nigeria</strong>
               <span>Event Venue</span>
             </div>
           </div>
