updage image for nigeria conference

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
   <section id="about" class="event-section">
     <div class="container event-sec" data-aos="fade-up">
       <div class="event-image" data-aos="fade-right">
-        <img src="images/sa/3.jpeg" alt="Original banner" />
+        <img src="images/nigeria/1.jpeg" alt="Original banner" />
 
       </div>
 
