add usa, ghana, nigeria events

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           ECONOMY in every country.
         </p>
         <div class="meta">
-          <span>14th December, 2025</span> • <span>Ikeja, Lagos, Nigeria</span>
+          <span>25th January, 2026</span> • <span>Open Center Hotel - Airport road, Lagos, Nigeria</span>
         </div>
         <div class="hero-ctas">
           <button id="heroRegister" class="btn primary">Register Now</button>
@@ -117,7 +117,7 @@
         <h1>Welcome to The <span>World Biggest Entrepreneur Submit</span></h1>
         <div class="about-description">
           <p>Get ready for a groundbreaking event! The World Entrepreneur Summit is set to ignite the entrepreneurial
-            spirit on 14th December, 2025. This extraordinary gathering will bring together a dynamic community of
+            spirit on 25th January, 2026. This extraordinary gathering will bring together a dynamic community of
             over 1000+ entrepreneurs from 20+ countries.</p>
           <p>Resource persons will include, men of renown and
             established entrepreneurs from across Africa and the
@@ -136,14 +136,14 @@
           <div class="detail-box">
             <i class="fa-solid fa-calendar"></i>
             <div class="date">
-              <strong>14th Dec, 2025</strong>
+              <strong>25th Jan, 2026</strong>
               <span>Event Date</span>
             </div>
           </div>
           <div class="detail-box">
             <i class="fa-solid fa-location-crosshairs"></i>
             <div class="location">
-              <strong>Ikeja, Lagos, Nigeria</strong>
+              <strong>Open Center Hotel - Airport road, Lagos, Nigeria</strong>
               <span>Event Venue</span>
             </div>
           </div>
