--- a/upcoming-events.html
+++ b/upcoming-events.html
@@ -59,25 +59,25 @@
             </div>
         </section>
 
-        <!-- Event 2: Ikeja -->
+        <!-- Event 2: Lagos -->
         <section class="event-section">
             <div class="container event-sec" data-aos="fade-up">
                 <div class="event-content" data-aos="fade-right" style="width: 100%;">
-                    <img src="images/nigeria/1.jpeg" alt="Ikeja Event"
+                    <img src="images/nigeria/1.jpeg" alt="Nigeria Event"
                         style="width: 100%; height: auto; object-fit: cover; border-radius: 10px; margin-bottom: 1.5rem;" />
                     <div class="event-details">
                         <div class="detail-box">
                             <i class="fa-solid fa-calendar"></i>
                             <div class="date">
-                                <strong>14th December, 2025</strong>
+                                <strong>25th January, 2026</strong>
                                 <span>Event Date</span>
                             </div>
                         </div>
                         <div class="detail-box">
                             <i class="fa-solid fa-location-crosshairs"></i>
                             <div class="location">
-                                <strong>DE REMBRANDT HOTEL IKEJA</strong>
-                                <span>Close to Shoprite</span>
+                                <strong>OPEN CENTER HOTEL, LAGOS</strong>
+                                <span>Airport Road</span>
                             </div>
                         </div>
                     </div>
@@ -119,10 +119,47 @@
             </div>
         </section>
 
-        <!-- Event 1 -->
+        <!-- Event: Ghana -->
         <section class="event-section">
             <div class="container event-sec" data-aos="fade-up">
                 <div class="event-content" data-aos="fade-left" style="width: 100%;">
+                    <div class="gallery-grid">
+                        <div class="gallery-item">
+                            <img src="images/ghana/1.jpeg" alt="Ghana Event 1" />
+                        </div>
+                        <div class="gallery-item">
+                            <img src="images/ghana/2.jpeg" alt="Ghana Event 2" />
+                        </div>
+                        <div class="gallery-item">
+                            <img src="images/ghana/3.jpeg" alt="Ghana Event 3" />
+                        </div>
+                    </div>
+                    <div class="event-details">
+                        <div class="detail-box">
+                            <i class="fa-solid fa-calendar"></i>
+                            <div class="date">
+                                <strong>21st February, 2026</strong>
+                                <span>Event Date</span>
+                            </div>
+                        </div>
+                        <div class="detail-box">
+                            <i class="fa-solid fa-location-crosshairs"></i>
+                            <div class="location">
+                                <strong>Kumasi - Ghana</strong>
+                                <span>Event Venue</span>
+                            </div>
+                        </div>
+                    </div>
+                    <a href="register.html" class="register-btn"
+                        style="margin-top: 1.5rem; display: inline-block;">REGISTER NOW</a>
+                </div>
+            </div>
+        </section>
+
+        <!-- Event 1 -->
+        <section class="event-section">
+            <div class="container event-sec" data-aos="fade-up">
+                <div class="event-content" data-aos="fade-right" style="width: 100%;">
                     <div class="gallery-grid">
                         <div class="gallery-item">
                             <img src="images/canada/1.jpeg" alt="Toronto Event 1" />
@@ -149,6 +186,43 @@
                             <i class="fa-solid fa-location-crosshairs"></i>
                             <div class="location">
                                 <strong>Toronto, Canada</strong>
+                                <span>Event Venue</span>
+                            </div>
+                        </div>
+                    </div>
+                    <a href="register.html" class="register-btn"
+                        style="margin-top: 1.5rem; display: inline-block;">REGISTER NOW</a>
+                </div>
+            </div>
+        </section>
+
+        <!-- Event: USA -->
+        <section class="event-section">
+            <div class="container event-sec" data-aos="fade-up">
+                <div class="event-content" data-aos="fade-left" style="width: 100%;">
+                    <div class="gallery-grid">
+                        <div class="gallery-item">
+                            <img src="images/usa/1.jpeg" alt="USA Event 1" />
+                        </div>
+                        <div class="gallery-item">
+                            <img src="images/usa/2.jpeg" alt="USA Event 2" />
+                        </div>
+                        <div class="gallery-item">
+                            <img src="images/usa/3.jpeg" alt="USA Event 3" />
+                        </div>
+                    </div>
+                    <div class="event-details">
+                        <div class="detail-box">
+                            <i class="fa-solid fa-calendar"></i>
+                            <div class="date">
+                                <strong>24th - 28th March, 2026</strong>
+                                <span>Event Date</span>
+                            </div>
+                        </div>
+                        <div class="detail-box">
+                            <i class="fa-solid fa-location-crosshairs"></i>
+                            <div class="location">
+                                <strong>Washington DC - USA</strong>
                                 <span>Event Venue</span>
                             </div>
                         </div>
