add usa, ghana, nigeria events

--- a/upcoming-events.html
+++ b/upcoming-events.html
@@ -76,8 +76,8 @@
                         <div class="detail-box">
                             <i class="fa-solid fa-location-crosshairs"></i>
                             <div class="location">
-                                <strong>OPEN CENTER HOTEL, LAGOS</strong>
-                                <span>Airport Road</span>
+                                <strong>OPEN CENTER HOTEL, LAGOS, NIGERIA</strong>
+                                <span>Event Venue</span>
                             </div>
                         </div>
                     </div>
