swap banner event on homepage to ghana event

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           ECONOMY in every country.
         </p>
         <div class="meta">
-          <span>25th January, 2026</span> • <span>Open Center Hotel - Airport road, Lagos, Nigeria</span>
+          <span>21st February, 2026</span> • <span>Kumasi, Ghana</span>
         </div>
         <div class="hero-ctas">
           <button id="heroRegister" class="btn primary">Register Now</button>
@@ -108,7 +108,7 @@
   <section id="about" class="event-section">
     <div class="container event-sec" data-aos="fade-up">
       <div class="event-image" data-aos="fade-right">
-        <img src="images/nigeria/1.jpeg" alt="Original banner" />
+        <img src="images/ghana/1.jpeg" alt="Ghana Event banner" />
 
       </div>
 
@@ -117,7 +117,7 @@
         <h1>Welcome to The <span>World Biggest Entrepreneur Submit</span></h1>
         <div class="about-description">
           <p>Get ready for a groundbreaking event! The World Entrepreneur Summit is set to ignite the entrepreneurial
-            spirit on 25th January, 2026. This extraordinary gathering will bring together a dynamic community of
+            spirit on 21st February, 2026. This extraordinary gathering will bring together a dynamic community of
             over 1000+ entrepreneurs from 20+ countries.</p>
           <p>Resource persons will include, men of renown and
             established entrepreneurs from across Africa and the
@@ -136,14 +136,14 @@
           <div class="detail-box">
             <i class="fa-solid fa-calendar"></i>
             <div class="date">
-              <strong>25th Jan, 2026</strong>
+              <strong>21st Feb, 2026</strong>
               <span>Event Date</span>
             </div>
           </div>
           <div class="detail-box">
             <i class="fa-solid fa-location-crosshairs"></i>
             <div class="location">
-              <strong>Open Center Hotel - Airport road, Lagos, Nigeria</strong>
+              <strong>Kumasi, Ghana</strong>
               <span>Event Venue</span>
             </div>
           </div>
